# hw7

./: alembic.ini  create_db.py  main.py  models.py  pyproject.toml  seeds.py
alembic/versions/: 72321ac4bb53_init.py
